--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
+    "newrelic": "^6.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   },
